fix collapse panel (#260)

--- a/css/codeception.css
+++ b/css/codeception.css
@@ -132,7 +132,8 @@ body #home-hero h1 {
 }
 
 .panel-collapse-body {
-	padding: 10px;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
 .maintainer a {
